--- a/page2.html
+++ b/page2.html
@@ -49,7 +49,7 @@
             <div class="info-section">
             <h2>Concept Photos/Photos</h2>
             <figure>
-                <img src="TXT/TXT CUTE.jpeg" alt="Image 1" width="300">
+                <img src="TXT CUTE.jpeg" alt="Image 1" width="300">
             </figure>
             
             <figure>
