--- a/page2.html
+++ b/page2.html
@@ -35,7 +35,7 @@
         <h1>TOMORROW X TOGETHER</h1>
         <nav>
             <ul>
-                <li><a href="page1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="page2.html">Photos</a></li>
                 <li><a href="https://ibighit.com/txt/eng/" target="_blank" rel="noopener noreferrer">Company Website</a></li>
                 <li><a href="https://ibighit.com/txt/eng/profile/" target="_blank" rel="noopener noreferrer">Member Profile</a></li>
@@ -49,7 +49,7 @@
             <div class="info-section">
             <h2>Concept Photos/Photos</h2>
             <figure>
-                <img src="TXT CUTE.jpeg" alt="Image 1" width="300">
+                <img src="txt cute.jpeg" alt="Image 1" width="300">
             </figure>
             
             <figure>
