--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <h1>TOMORROW X TOGETHER</h1>
         <nav>
             <ul>
-                <li><a href="AboutTXT.html" class="active">Home</a></li>
-                <li><a href="PhotosTXT.html">Photos</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="page1.html">Photos</a></li>
                 <li><a href="https://ibighit.com/txt/eng/" target="_blank" rel="noopener noreferrer">Company Website</a></li>
                 <li><a href="https://ibighit.com/txt/eng/profile/" target="_blank" rel="noopener noreferrer">Member Profile</a></li>
             </ul>
