--- a/page2.html
+++ b/page2.html
@@ -35,8 +35,8 @@
         <h1>TOMORROW X TOGETHER</h1>
         <nav>
             <ul>
-                <li><a href="AboutTXT.html">Home</a></li>
-                <li><a href="PhotosTXT.html"class="active">Photos</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html"class="active">Photos</a></li>
                 <li><a href="https://ibighit.com/txt/eng/" target="_blank" rel="noopener noreferrer">Company Website</a></li>
                 <li><a href="https://ibighit.com/txt/eng/profile/" target="_blank" rel="noopener noreferrer">Member Profile</a></li>
             </ul>
